created csv city_weather

--- a/WeatherPy/WeatherPy-gietl.ipynb
+++ b/WeatherPy/WeatherPy-gietl.ipynb
@@ -825,214 +825,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>City</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lng</th>\n",
-       "      <th>Max Temp</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Cloudiness</th>\n",
-       "      <th>Wind Speed</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Goba</td>\n",
-       "      <td>7.0167</td>\n",
-       "      <td>39.9833</td>\n",
-       "      <td>283.97</td>\n",
-       "      <td>283.97</td>\n",
-       "      <td>80</td>\n",
-       "      <td>1.85</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>1618424191</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>New Norfolk</td>\n",
-       "      <td>-42.7826</td>\n",
-       "      <td>147.0587</td>\n",
-       "      <td>285.37</td>\n",
-       "      <td>285.37</td>\n",
-       "      <td>94</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>1618424702</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Goderich</td>\n",
-       "      <td>43.7501</td>\n",
-       "      <td>-81.7165</td>\n",
-       "      <td>283.15</td>\n",
-       "      <td>283.15</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.60</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>1618424702</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Saskylakh</td>\n",
-       "      <td>71.9167</td>\n",
-       "      <td>114.0833</td>\n",
-       "      <td>257.63</td>\n",
-       "      <td>257.63</td>\n",
-       "      <td>66</td>\n",
-       "      <td>2.28</td>\n",
-       "      <td>RU</td>\n",
-       "      <td>1618424702</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Cape Town</td>\n",
-       "      <td>-33.9258</td>\n",
-       "      <td>18.4232</td>\n",
-       "      <td>292.04</td>\n",
-       "      <td>292.04</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6.69</td>\n",
-       "      <td>ZA</td>\n",
-       "      <td>1618424405</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>572</th>\n",
-       "      <td>Margate</td>\n",
-       "      <td>51.3813</td>\n",
-       "      <td>1.3862</td>\n",
-       "      <td>279.26</td>\n",
-       "      <td>279.26</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2.24</td>\n",
-       "      <td>GB</td>\n",
-       "      <td>1618424893</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>573</th>\n",
-       "      <td>Launceston</td>\n",
-       "      <td>-41.4500</td>\n",
-       "      <td>147.1667</td>\n",
-       "      <td>283.15</td>\n",
-       "      <td>283.15</td>\n",
-       "      <td>72</td>\n",
-       "      <td>7.20</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>1618424894</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>574</th>\n",
-       "      <td>Bandiagara</td>\n",
-       "      <td>14.3501</td>\n",
-       "      <td>-3.6104</td>\n",
-       "      <td>312.15</td>\n",
-       "      <td>312.15</td>\n",
-       "      <td>76</td>\n",
-       "      <td>4.12</td>\n",
-       "      <td>ML</td>\n",
-       "      <td>1618424894</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>575</th>\n",
-       "      <td>Alice Springs</td>\n",
-       "      <td>-23.7000</td>\n",
-       "      <td>133.8833</td>\n",
-       "      <td>288.15</td>\n",
-       "      <td>288.15</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2.06</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>1618424894</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>576</th>\n",
-       "      <td>Zalţan</td>\n",
-       "      <td>32.9470</td>\n",
-       "      <td>11.8665</td>\n",
-       "      <td>289.64</td>\n",
-       "      <td>289.64</td>\n",
-       "      <td>77</td>\n",
-       "      <td>7.08</td>\n",
-       "      <td>LY</td>\n",
-       "      <td>1618424895</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>577 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              City      Lat       Lng  Max Temp  Humidity  Cloudiness  \\\n",
-       "0             Goba   7.0167   39.9833    283.97    283.97          80   \n",
-       "1      New Norfolk -42.7826  147.0587    285.37    285.37          94   \n",
-       "2         Goderich  43.7501  -81.7165    283.15    283.15           1   \n",
-       "3        Saskylakh  71.9167  114.0833    257.63    257.63          66   \n",
-       "4        Cape Town -33.9258   18.4232    292.04    292.04           0   \n",
-       "..             ...      ...       ...       ...       ...         ...   \n",
-       "572        Margate  51.3813    1.3862    279.26    279.26           7   \n",
-       "573     Launceston -41.4500  147.1667    283.15    283.15          72   \n",
-       "574     Bandiagara  14.3501   -3.6104    312.15    312.15          76   \n",
-       "575  Alice Springs -23.7000  133.8833    288.15    288.15          10   \n",
-       "576         Zalţan  32.9470   11.8665    289.64    289.64          77   \n",
-       "\n",
-       "     Wind Speed Country        Date  \n",
-       "0          1.85      ET  1618424191  \n",
-       "1          0.89      AU  1618424702  \n",
-       "2          3.60      CA  1618424702  \n",
-       "3          2.28      RU  1618424702  \n",
-       "4          6.69      ZA  1618424405  \n",
-       "..          ...     ...         ...  \n",
-       "572        2.24      GB  1618424893  \n",
-       "573        7.20      AU  1618424894  \n",
-       "574        4.12      ML  1618424894  \n",
-       "575        2.06      AU  1618424894  \n",
-       "576        7.08      LY  1618424895  \n",
-       "\n",
-       "[577 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#new loop on the city_results \n",
     "table_results = []\n",
@@ -1075,7 +870,8 @@
     "table_results_df = pd.DataFrame(table_results)\n",
     "table_results_df\n",
     "\n",
-    "#export to csv"
+    "#export to csv\n",
+    "table_results_df.to_csv('city_weather.csv')"
    ]
   },
   {
